interpreter/y.output

state 0
	$accept: .program $end 

	INTEGER  shift 5
	.  error

	Lines  goto 2
	Line  goto 3
	LineNumber  goto 4
	program  goto 1

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  Lines.    (1)
	Lines:  Lines.Line 

	INTEGER  shift 5
	.  reduce 1 (src line 122)

	Line  goto 6
	LineNumber  goto 4

state 3
	Lines:  Line.    (2)

	.  reduce 2 (src line 129)


state 4
	Line:  LineNumber.Statements NEWLINE 

	GOTO  shift 22
	GO  shift 23
	PRINT  shift 24
	IF  shift 26
	FOR  shift 28
	NEXT  shift 29
	REM  shift 33
	DIM  shift 27
	DEF  shift 31
	IDENTIFIER  shift 34
	RETURN  shift 30
	END  shift 32
	LET  shift 25
	.  error

	Statement  goto 8
	Statements  goto 7
	GotoStatement  goto 9
	EndStatement  goto 19
	PrintStatement  goto 10
	ForStatement  goto 14
	NextStatement  goto 15
	AssignmentStatement  goto 11
	ReturnStatement  goto 17
	GoSubStatement  goto 16
	DefStatement  goto 18
	IfStatement  goto 12
	OperationStatement  goto 21
	RemarkStatement  goto 20
	DimStatement  goto 13

state 5
	LineNumber:  INTEGER.    (5)

	.  reduce 5 (src line 143)


state 6
	Lines:  Lines Line.    (3)

	.  reduce 3 (src line 133)


state 7
	Line:  LineNumber Statements.NEWLINE 
	Statements:  Statements.COLON Statement 

	NEWLINE  shift 35
	COLON  shift 36
	.  error


state 8
	Statements:  Statement.    (6)

	.  reduce 6 (src line 148)


state 9
	Statement:  GotoStatement.    (8)

	.  reduce 8 (src line 157)


state 10
	Statement:  PrintStatement.    (9)

	.  reduce 9 (src line 158)


state 11
	Statement:  AssignmentStatement.    (10)

	.  reduce 10 (src line 159)


state 12
	Statement:  IfStatement.    (11)

	.  reduce 11 (src line 160)


state 13
	Statement:  DimStatement.    (12)

	.  reduce 12 (src line 161)


state 14
	Statement:  ForStatement.    (13)

	.  reduce 13 (src line 162)


state 15
	Statement:  NextStatement.    (14)

	.  reduce 14 (src line 163)


state 16
	Statement:  GoSubStatement.    (15)

	.  reduce 15 (src line 164)


state 17
	Statement:  ReturnStatement.    (16)

	.  reduce 16 (src line 165)


state 18
	Statement:  DefStatement.    (17)

	.  reduce 17 (src line 166)


state 19
	Statement:  EndStatement.    (18)

	.  reduce 18 (src line 167)


state 20
	Statement:  RemarkStatement.    (19)

	.  reduce 19 (src line 168)


state 21
	Statement:  OperationStatement.    (20)

	.  reduce 20 (src line 169)


state 22
	GotoStatement:  GOTO.Expression 

	INTEGER  shift 56
	FLOAT  shift 57
	STRING_LITERAL  shift 55
	BOOLEAN  shift 58
	NULL  shift 59
	IDENTIFIER  shift 63
	MINUS  shift 62
	LEFT_PARENTHESIS  shift 38
	LEFT_BRACKET  shift 61
	LEFT_BRACE  shift 60
	.  error

	Symbol  goto 44
	MapPropertyExpression  goto 43
	AdditiveExpression  goto 39
	MultiplicationExpression  goto 40
	DivisionExpression  goto 41
	PowerExpression  goto 42
	Expression  goto 37
	UnaryExpression  goto 53
	Identifier  goto 54
	StringLiteral  goto 45
	Integer  goto 46
	Float  goto 47
	Null  goto 49
	Boolean  goto 48
	Array  goto 51
	Map  goto 50
	FunctionCall  goto 52

state 23
	GotoStatement:  GO.TO Expression 
	GoSubStatement:  GO.SUB Expression 

	TO  shift 64
	SUB  shift 65
	.  error


state 24
	PrintStatement:  PRINT.Args 
	Args: .    (86)

	INTEGER  shift 56
	FLOAT  shift 57
	STRING_LITERAL  shift 55
	BOOLEAN  shift 58
	NULL  shift 59
	IDENTIFIER  shift 63
	MINUS  shift 62
	LEFT_PARENTHESIS  shift 38
	LEFT_BRACKET  shift 61
	LEFT_BRACE  shift 60
	.  reduce 86 (src line 441)

	Args  goto 66
	Arg  goto 67
	Symbol  goto 44
	MapPropertyExpression  goto 43
	AdditiveExpression  goto 39
	MultiplicationExpression  goto 40
	DivisionExpression  goto 41
	PowerExpression  goto 42
	Expression  goto 68
	UnaryExpression  goto 53
	Identifier  goto 54
	StringLiteral  goto 45
	Integer  goto 46
	Float  goto 47
	Null  goto 49
	Boolean  goto 48
	Array  goto 51
	Map  goto 50
	FunctionCall  goto 52

state 25
	AssignmentStatement:  LET.Symbol EQUALS Expression 
	AssignmentStatement:  LET.FunctionCall EQUALS Expression 
	AssignmentStatement:  LET.MapPropertyExpression EQUALS Expression 

	INTEGER  shift 56
	FLOAT  shift 57
	STRING_LITERAL  shift 55
	BOOLEAN  shift 58
	NULL  shift 59
	IDENTIFIER  shift 63
	MINUS  shift 62
	LEFT_PARENTHESIS  shift 38
	LEFT_BRACKET  shift 61
	LEFT_BRACE  shift 60
	.  error

	Symbol  goto 69
	MapPropertyExpression  goto 71
	AdditiveExpression  goto 39
	MultiplicationExpression  goto 40
	DivisionExpression  goto 41
	PowerExpression  goto 42
	Expression  goto 72
	UnaryExpression  goto 53
	Identifier  goto 54
	StringLiteral  goto 45
	Integer  goto 46
	Float  goto 47
	Null  goto 49
	Boolean  goto 48
	Array  goto 51
	Map  goto 50
	FunctionCall  goto 70

state 26
	IfStatement:  IF.RelationExpression THEN Expression 

	INTEGER  shift 56
	FLOAT  shift 57
	STRING_LITERAL  shift 55
	BOOLEAN  shift 58
	NULL  shift 59
	IDENTIFIER  shift 63
	MINUS  shift 62
	LEFT_PARENTHESIS  shift 38
	LEFT_BRACKET  shift 61
	LEFT_BRACE  shift 60
	.  error

	RelationExpression  goto 73
	Symbol  goto 44
	MapPropertyExpression  goto 43
	AdditiveExpression  goto 39
	MultiplicationExpression  goto 40
	DivisionExpression  goto 41
	PowerExpression  goto 42
	Expression  goto 74
	UnaryExpression  goto 53
	Identifier  goto 54
	StringLiteral  goto 45
	Integer  goto 46
	Float  goto 47
	Null  goto 49
	Boolean  goto 48
	Array  goto 51
	Map  goto 50
	FunctionCall  goto 52

state 27
	DimStatement:  DIM.ArrayDefinitions 

	IDENTIFIER  shift 63
	.  error

	Identifier  goto 77
	ArrayDefinition  goto 76
	ArrayDefinitions  goto 75

state 28
	ForStatement:  FOR.Identifier EQUALS Expression TO Expression 
	ForStatement:  FOR.Identifier EQUALS Expression TO Expression STEP Expression 

	IDENTIFIER  shift 63
	.  error

	Identifier  goto 78

state 29
	NextStatement:  NEXT.Identifier 

	IDENTIFIER  shift 63
	.  error

	Identifier  goto 79

state 30
	ReturnStatement:  RETURN.    (30)

	.  reduce 30 (src line 224)


state 31
	DefStatement:  DEF.Identifier EQUALS Expression 
	DefStatement:  DEF.Identifier LEFT_PARENTHESIS Identifier RIGHT_PARENTHESIS EQUALS Expression 

	IDENTIFIER  shift 63
	.  error

	Identifier  goto 80

state 32
	EndStatement:  END.    (23)

	.  reduce 23 (src line 182)


state 33
	RemarkStatement:  REM.STRING_LITERAL 

	STRING_LITERAL  shift 81
	.  error


state 34
	OperationStatement:  IDENTIFIER.Args 
	Args: .    (86)

	INTEGER  shift 56
	FLOAT  shift 57
	STRING_LITERAL  shift 55
	BOOLEAN  shift 58
	NULL  shift 59
	IDENTIFIER  shift 63
	MINUS  shift 62
	LEFT_PARENTHESIS  shift 38
	LEFT_BRACKET  shift 61
	LEFT_BRACE  shift 60
	.  reduce 86 (src line 441)

	Args  goto 82
	Arg  goto 67
	Symbol  goto 44
	MapPropertyExpression  goto 43
	AdditiveExpression  goto 39
	MultiplicationExpression  goto 40
	DivisionExpression  goto 41
	PowerExpression  goto 42
	Expression  goto 68
	UnaryExpression  goto 53
	Identifier  goto 54
	StringLiteral  goto 45
	Integer  goto 46
	Float  goto 47
	Null  goto 49
	Boolean  goto 48
	Array  goto 51
	Map  goto 50
	FunctionCall  goto 52

state 35
	Line:  LineNumber Statements NEWLINE.    (4)

	.  reduce 4 (src line 138)


state 36
	Statements:  Statements COLON.Statement 

	GOTO  shift 22
	GO  shift 23
	PRINT  shift 24
	IF  shift 26
	FOR  shift 28
	NEXT  shift 29
	REM  shift 33
	DIM  shift 27
	DEF  shift 31
	IDENTIFIER  shift 34
	RETURN  shift 30
	END  shift 32
	LET  shift 25
	.  error

	Statement  goto 83
	GotoStatement  goto 9
	EndStatement  goto 19
	PrintStatement  goto 10
	ForStatement  goto 14
	NextStatement  goto 15
	AssignmentStatement  goto 11
	ReturnStatement  goto 17
	GoSubStatement  goto 16
	DefStatement  goto 18
	IfStatement  goto 12
	OperationStatement  goto 21
	RemarkStatement  goto 20
	DimStatement  goto 13

state 37
	GotoStatement:  GOTO Expression.    (27)
	FunctionCall:  Expression.LEFT_PARENTHESIS Args RIGHT_PARENTHESIS 
	AdditiveExpression:  Expression.PLUS Expression 
	AdditiveExpression:  Expression.MINUS Expression 
	MultiplicationExpression:  Expression.TIMES Expression 
	DivisionExpression:  Expression.DIVIDE Expression 
	PowerExpression:  Expression.CIRCUMFLEX Expression 
	MapPropertyExpression:  Expression.DOT IDENTIFIER 
	MapPropertyExpression:  Expression.LEFT_BRACKET Expression RIGHT_BRACKET 

	DOT  shift 90
	PLUS  shift 85
	MINUS  shift 86
	CIRCUMFLEX  shift 89
	LEFT_PARENTHESIS  shift 84
	LEFT_BRACKET  shift 91
	TIMES  shift 87
	DIVIDE  shift 88
	.  reduce 27 (src line 210)


state 38
	Expression:  LEFT_PARENTHESIS.Expression RIGHT_PARENTHESIS 

	INTEGER  shift 56
	FLOAT  shift 57
	STRING_LITERAL  shift 55
	BOOLEAN  shift 58
	NULL  shift 59
	IDENTIFIER  shift 63
	MINUS  shift 62
	LEFT_PARENTHESIS  shift 38
	LEFT_BRACKET  shift 61
	LEFT_BRACE  shift 60
	.  error

	Symbol  goto 44
	MapPropertyExpression  goto 43
	AdditiveExpression  goto 39
	MultiplicationExpression  goto 40
	DivisionExpression  goto 41
	PowerExpression  goto 42
	Expression  goto 92
	UnaryExpression  goto 53
	Identifier  goto 54
	StringLiteral  goto 45
	Integer  goto 46
	Float  goto 47
	Null  goto 49
	Boolean  goto 48
	Array  goto 51
	Map  goto 50
	FunctionCall  goto 52

state 39
	Expression:  AdditiveExpression.    (56)

	.  reduce 56 (src line 352)


state 40
	Expression:  MultiplicationExpression.    (57)

	.  reduce 57 (src line 353)


state 41
	Expression:  DivisionExpression.    (58)

	.  reduce 58 (src line 354)


state 42
	Expression:  PowerExpression.    (59)

	.  reduce 59 (src line 355)


state 43
	Expression:  MapPropertyExpression.    (60)

	.  reduce 60 (src line 356)


state 44
	Expression:  Symbol.    (61)

	.  reduce 61 (src line 357)


state 45
	Expression:  StringLiteral.    (62)

	.  reduce 62 (src line 358)


state 46
	Expression:  Integer.    (63)

	.  reduce 63 (src line 359)


state 47
	Expression:  Float.    (64)

	.  reduce 64 (src line 360)


state 48
	Expression:  Boolean.    (65)

	.  reduce 65 (src line 361)


state 49
	Expression:  Null.    (66)

	.  reduce 66 (src line 362)


state 50
	Expression:  Map.    (67)

	.  reduce 67 (src line 363)


state 51
	Expression:  Array.    (68)

	.  reduce 68 (src line 364)


state 52
	Expression:  FunctionCall.    (69)

	.  reduce 69 (src line 365)


state 53
	Expression:  UnaryExpression.    (70)

	.  reduce 70 (src line 366)


state 54
	Symbol:  Identifier.    (46)

	.  reduce 46 (src line 307)


state 55
	StringLiteral:  STRING_LITERAL.    (73)

	.  reduce 73 (src line 378)


state 56
	Integer:  INTEGER.    (74)

	.  reduce 74 (src line 384)


state 57
	Float:  FLOAT.    (75)

	.  reduce 75 (src line 389)


state 58
	Boolean:  BOOLEAN.    (76)

	.  reduce 76 (src line 394)


state 59
	Null:  NULL.    (77)

	.  reduce 77 (src line 399)


state 60
	Map:  LEFT_BRACE.MapPropertyList RIGHT_BRACE 
	MapPropertyList: .    (82)

	IDENTIFIER  shift 95
	.  reduce 82 (src line 423)

	MapPropertyList  goto 93
	MapProperty  goto 94

state 61
	Array:  LEFT_BRACKET.Args RIGHT_BRACKET 
	Args: .    (86)

	INTEGER  shift 56
	FLOAT  shift 57
	STRING_LITERAL  shift 55
	BOOLEAN  shift 58
	NULL  shift 59
	IDENTIFIER  shift 63
	MINUS  shift 62
	LEFT_PARENTHESIS  shift 38
	LEFT_BRACKET  shift 61
	LEFT_BRACE  shift 60
	.  reduce 86 (src line 441)

	Args  goto 96
	Arg  goto 67
	Symbol  goto 44
	MapPropertyExpression  goto 43
	AdditiveExpression  goto 39
	MultiplicationExpression  goto 40
	DivisionExpression  goto 41
	PowerExpression  goto 42
	Expression  goto 68
	UnaryExpression  goto 53
	Identifier  goto 54
	StringLiteral  goto 45
	Integer  goto 46
	Float  goto 47
	Null  goto 49
	Boolean  goto 48
	Array  goto 51
	Map  goto 50
	FunctionCall  goto 52

state 62
	UnaryExpression:  MINUS.Expression 

	INTEGER  shift 56
	FLOAT  shift 57
	STRING_LITERAL  shift 55
	BOOLEAN  shift 58
	NULL  shift 59
	IDENTIFIER  shift 63
	MINUS  shift 62
	LEFT_PARENTHESIS  shift 38
	LEFT_BRACKET  shift 61
	LEFT_BRACE  shift 60
	.  error

	Symbol  goto 44
	MapPropertyExpression  goto 43
	AdditiveExpression  goto 39
	MultiplicationExpression  goto 40
	DivisionExpression  goto 41
	PowerExpression  goto 42
	Expression  goto 97
	UnaryExpression  goto 53
	Identifier  goto 54
	StringLiteral  goto 45
	Integer  goto 46
	Float  goto 47
	Null  goto 49
	Boolean  goto 48
	Array  goto 51
	Map  goto 50
	FunctionCall  goto 52

state 63
	Identifier:  IDENTIFIER.    (72)

	.  reduce 72 (src line 373)


state 64
	GotoStatement:  GO TO.Expression 

	INTEGER  shift 56
	FLOAT  shift 57
	STRING_LITERAL  shift 55
	BOOLEAN  shift 58
	NULL  shift 59
	IDENTIFIER  shift 63
	MINUS  shift 62
	LEFT_PARENTHESIS  shift 38
	LEFT_BRACKET  shift 61
	LEFT_BRACE  shift 60
	.  error

	Symbol  goto 44
	MapPropertyExpression  goto 43
	AdditiveExpression  goto 39
	MultiplicationExpression  goto 40
	DivisionExpression  goto 41
	PowerExpression  goto 42
	Expression  goto 98
	UnaryExpression  goto 53
	Identifier  goto 54
	StringLiteral  goto 45
	Integer  goto 46
	Float  goto 47
	Null  goto 49
	Boolean  goto 48
	Array  goto 51
	Map  goto 50
	FunctionCall  goto 52

state 65
	GoSubStatement:  GO SUB.Expression 

	INTEGER  shift 56
	FLOAT  shift 57
	STRING_LITERAL  shift 55
	BOOLEAN  shift 58
	NULL  shift 59
	IDENTIFIER  shift 63
	MINUS  shift 62
	LEFT_PARENTHESIS  shift 38
	LEFT_BRACKET  shift 61
	LEFT_BRACE  shift 60
	.  error

	Symbol  goto 44
	MapPropertyExpression  goto 43
	AdditiveExpression  goto 39
	MultiplicationExpression  goto 40
	DivisionExpression  goto 41
	PowerExpression  goto 42
	Expression  goto 99
	UnaryExpression  goto 53
	Identifier  goto 54
	StringLiteral  goto 45
	Integer  goto 46
	Float  goto 47
	Null  goto 49
	Boolean  goto 48
	Array  goto 51
	Map  goto 50
	FunctionCall  goto 52

state 66
	PrintStatement:  PRINT Args.    (31)
	Args:  Args.Separator Arg 

	COMMA  shift 101
	SEMICOLON  shift 102
	.  reduce 31 (src line 229)

	Separator  goto 100

state 67
	Args:  Arg.    (87)

	.  reduce 87 (src line 445)


state 68
	FunctionCall:  Expression.LEFT_PARENTHESIS Args RIGHT_PARENTHESIS 
	AdditiveExpression:  Expression.PLUS Expression 
	AdditiveExpression:  Expression.MINUS Expression 
	MultiplicationExpression:  Expression.TIMES Expression 
	DivisionExpression:  Expression.DIVIDE Expression 
	PowerExpression:  Expression.CIRCUMFLEX Expression 
	MapPropertyExpression:  Expression.DOT IDENTIFIER 
	MapPropertyExpression:  Expression.LEFT_BRACKET Expression RIGHT_BRACKET 
	Arg:  Expression.    (91)

	DOT  shift 90
	PLUS  shift 85
	MINUS  shift 86
	CIRCUMFLEX  shift 89
	LEFT_PARENTHESIS  shift 84
	LEFT_BRACKET  shift 91
	TIMES  shift 87
	DIVIDE  shift 88
	.  reduce 91 (src line 457)


state 69
	AssignmentStatement:  LET Symbol.EQUALS Expression 
	Expression:  Symbol.    (61)

	EQUALS  shift 103
	.  reduce 61 (src line 357)


state 70
	AssignmentStatement:  LET FunctionCall.EQUALS Expression 
	Expression:  FunctionCall.    (69)

	EQUALS  shift 104
	.  reduce 69 (src line 365)


state 71
	AssignmentStatement:  LET MapPropertyExpression.EQUALS Expression 
	Expression:  MapPropertyExpression.    (60)

	EQUALS  shift 105
	.  reduce 60 (src line 356)


state 72
	FunctionCall:  Expression.LEFT_PARENTHESIS Args RIGHT_PARENTHESIS 
	AdditiveExpression:  Expression.PLUS Expression 
	AdditiveExpression:  Expression.MINUS Expression 
	MultiplicationExpression:  Expression.TIMES Expression 
	DivisionExpression:  Expression.DIVIDE Expression 
	PowerExpression:  Expression.CIRCUMFLEX Expression 
	MapPropertyExpression:  Expression.DOT IDENTIFIER 
	MapPropertyExpression:  Expression.LEFT_BRACKET Expression RIGHT_BRACKET 

	DOT  shift 90
	PLUS  shift 85
	MINUS  shift 86
	CIRCUMFLEX  shift 89
	LEFT_PARENTHESIS  shift 84
	LEFT_BRACKET  shift 91
	TIMES  shift 87
	DIVIDE  shift 88
	.  error


state 73
	IfStatement:  IF RelationExpression.THEN Expression 

	THEN  shift 106
	.  error


state 74
	RelationExpression:  Expression.Comparator Expression 
	FunctionCall:  Expression.LEFT_PARENTHESIS Args RIGHT_PARENTHESIS 
	AdditiveExpression:  Expression.PLUS Expression 
	AdditiveExpression:  Expression.MINUS Expression 
	MultiplicationExpression:  Expression.TIMES Expression 
	DivisionExpression:  Expression.DIVIDE Expression 
	PowerExpression:  Expression.CIRCUMFLEX Expression 
	MapPropertyExpression:  Expression.DOT IDENTIFIER 
	MapPropertyExpression:  Expression.LEFT_BRACKET Expression RIGHT_BRACKET 

	DOT  shift 90
	PLUS  shift 85
	MINUS  shift 86
	CIRCUMFLEX  shift 89
	EQUALS  shift 108
	LESS_THAN  shift 110
	GREATER_THAN  shift 111
	NOT_EQUALS  shift 109
	LEFT_PARENTHESIS  shift 84
	LEFT_BRACKET  shift 91
	TIMES  shift 87
	DIVIDE  shift 88
	.  error

	Comparator  goto 107

state 75
	DimStatement:  DIM ArrayDefinitions.    (24)

	.  reduce 24 (src line 187)


state 76
	ArrayDefinitions:  ArrayDefinition.    (48)

	.  reduce 48 (src line 314)


state 77
	ArrayDefinition:  Identifier.LEFT_PARENTHESIS Args RIGHT_PARENTHESIS 

	LEFT_PARENTHESIS  shift 112
	.  error


state 78
	ForStatement:  FOR Identifier.EQUALS Expression TO Expression 
	ForStatement:  FOR Identifier.EQUALS Expression TO Expression STEP Expression 

	EQUALS  shift 113
	.  error


state 79
	NextStatement:  NEXT Identifier.    (38)

	.  reduce 38 (src line 270)


state 80
	DefStatement:  DEF Identifier.EQUALS Expression 
	DefStatement:  DEF Identifier.LEFT_PARENTHESIS Identifier RIGHT_PARENTHESIS EQUALS Expression 

	EQUALS  shift 114
	LEFT_PARENTHESIS  shift 115
	.  error


state 81
	RemarkStatement:  REM STRING_LITERAL.    (22)

	.  reduce 22 (src line 177)


state 82
	OperationStatement:  IDENTIFIER Args.    (21)
	Args:  Args.Separator Arg 

	COMMA  shift 101
	SEMICOLON  shift 102
	.  reduce 21 (src line 172)

	Separator  goto 100

state 83
	Statements:  Statements COLON Statement.    (7)

	.  reduce 7 (src line 152)


state 84
	FunctionCall:  Expression LEFT_PARENTHESIS.Args RIGHT_PARENTHESIS 
	Args: .    (86)

	INTEGER  shift 56
	FLOAT  shift 57
	STRING_LITERAL  shift 55
	BOOLEAN  shift 58
	NULL  shift 59
	IDENTIFIER  shift 63
	MINUS  shift 62
	LEFT_PARENTHESIS  shift 38
	LEFT_BRACKET  shift 61
	LEFT_BRACE  shift 60
	.  reduce 86 (src line 441)

	Args  goto 116
	Arg  goto 67
	Symbol  goto 44
	MapPropertyExpression  goto 43
	AdditiveExpression  goto 39
	MultiplicationExpression  goto 40
	DivisionExpression  goto 41
	PowerExpression  goto 42
	Expression  goto 68
	UnaryExpression  goto 53
	Identifier  goto 54
	StringLiteral  goto 45
	Integer  goto 46
	Float  goto 47
	Null  goto 49
	Boolean  goto 48
	Array  goto 51
	Map  goto 50
	FunctionCall  goto 52
